# common_parallel_rust

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  committed.toml  index.html  justfile  rustfmt.toml  sample-webapp-a14681ec8aab19cd.js  sample-webapp-a14681ec8aab19cd_bg.wasm  sample_webapp-8924c2a02f74fabe.js  sample_webapp-8924c2a02f74fabe_bg.wasm  sample_webapp-c27be92bddb5dd17.js  sample_webapp-c27be92bddb5dd17_bg.wasm  some  typos.toml
.cargo/: config.toml
.github/workflows/: cargo_machete.yml  pages.yml  rust.yml  spelling_and_links.yml  typos.yml
.support/git_hooks/: pre-commit
crates/sample-async/: Cargo.toml
crates/sample-async/src/: error.rs  main.rs
crates/sample-egui/: Cargo.toml  README.md
crates/sample-egui/src/: app.rs  error.rs  lib.rs  main.rs
crates/sample-webapp/: Cargo.toml  README.md
crates/sample-webapp/src/: app.rs  lib.rs  main.rs
crates/sample_async/: Cargo.toml  README.md
crates/sample_async/src/: error.rs  lib.rs  main.rs  support.rs
crates/sample_async/src/support/: error.rs  hidden_value.rs  subscriber.rs
crates/sample_crate/: Cargo.toml
crates/sample_crate/src/: lib.rs  main.rs  support.rs
crates/sample_crate/src/support/: error.rs  subscriber.rs
crates/sample_egui/: Cargo.toml
crates/sample_egui/src/: app.rs  error.rs  lib.rs  main.rs  support.rs
crates/sample_webapp/: Cargo.toml  README.md
crates/sample_webapp/src/: app.rs  error.rs  main.rs
crates/try-axum/: Cargo.toml  README.md
crates/try-axum/src/: main.rs
crates/try-evalmacro/: Cargo.toml
crates/try-evalmacro/src/: main.rs
crates/try-trait/: Cargo.toml  README.md
crates/try-trait/src/: error.rs  main.rs
crates/utilities/: Cargo.toml
crates/utilities/src/: hidden_value.rs  subscriber.rs
src/: lib.rs  main.rs
src-crate/: Cargo.toml
src-crate/src/: error.rs
xtask/: Cargo.toml
xtask/src/: main.rs  types_manual.rs
