# Settings for Rust Workspace
# [Cargo Manifest Configuration Reference](https://doc.rust-lang.org/stable/cargo/reference/manifest.html#the-lints-section)

[workspace]
resolver = "3"
members = [
  "src-crate",
  "xtask",
]


[workspace.package]
edition =     "2024"
authors =    ["ESL <33399972+dream-dasher@users.noreply.github.com>",]


[workspace.lints.rust]
unsafe_code =                "warn"  # (removable default)
[workspace.lints.clippy]
uninlined_format_args =      "allow" # allow `"name is {}", name` instead of `"name is {name}"`
allow_attributes =           "warn"  # use `#[expect(...)]` instead
undocumented_unsafe_blocks = "deny"  # "forbid" lint level appears buggy


[profile.release]
codegen-units = 1
lto =           true  # true:= "fat"
[profile.profiling]   # for perf-analysis, e.g. `samply`
inherits =     "release"
debug =         true


[workspace.dependencies]
# --- user-deps ---
clap =               { version = "4", features = ["derive","wrap_help",] }  # "derive", "env", "string", "unicode", "wrap_help",
thiserror =                      "2"
tracing =            { version = "0.1", features = [] }  # "release_max_level_warn"^"release_max_level_off"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # "env-filter","json"
owo-colors =                     "4"


rand =  { version = "0.9", features = [] }  # "log","serde","simd_support"
serde = { version = "1", features = ["derive"] }  # "derive"
serde_json =        "1"

derive_more = { version = "2", features = ["full"] }  # "add","add_assign","as_ref","constructor","debug","deref","deref_mut","display","error","from","from_str","index","index_mut","into","into_iterator","is_variant","mul","mul_assign","not","sum","try_from","try_into","try_unwrap","unwrap",
indoc =                   "2"


# --- dev-deps ---
insta =                "1"
pretty_assertions =    "1"
quickcheck =           "1"
quickcheck_macros =    "1"
test-log = { version = "0.2", features = ["trace"] }  # "trace"

