[package]
publish =     false
name =        "xtask"
description = "sample 'xtask'"
version =     "0.1.0"

edition =     {workspace=true}
authors =     {workspace=true}
categories  = {workspace=true}
keywords =    {workspace=true}

[lints]
workspace = true

[dependencies]
clap =       {workspace=true}
owo-colors = {workspace=true}

thiserror =  {workspace=true}

# [dev-dependencies]
