[package]
edition = { workspace=true }
authors = { workspace=true }

publish =     false
name =        "xtask"
description = "sample 'xtask'"
version =     "0.1.0"


[lints]
workspace = true

[dependencies]
clap =       { workspace=true }
owo-colors = { workspace=true }


[dev-dependencies]
# insta =                "1"
pretty_assertions = { workspace=true }
test-log =          { workspace=true }
quickcheck =        { workspace=true }
quickcheck_macros = { workspace=true }
