[package]
name = "sample-async"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true


[dependencies]
# --- local ---
utilities = { path = "../utilities" }

## --Async--
futures = { workspace = true }
tokio = { workspace = true, features = ["rt"]  }# "fs","io-std","io-util","net","parking_lot","process","rt","rt-multi-thread","signal","sync","time",
### - Remote -
reqwest = { workspace = true, features = ["json"] } # "cookies","json",
# sqlx = { workspace = true, features = ["tls-rustls"] } # "sqlite","runtime-tokio",
### - Accessory -
governor = { workspace = true }
url = { workspace = true }

## --Diagnostics--
tracing = { workspace = true }  # features = ["release_max_level_warn"] | ["release_max_level_off"]
# tracing-appender = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true , features = [] } # "env-filter","json"
# tracing-timing = { workspace = true }

## --Env & Files--
# arboard = { workspace = true }
# include_dir = { workspace = true }

## --Ergonomics--
# bon = { workspace = true }
derive_more = { workspace = true , features = ["error", "from", "display"] }
# indoc = { workspace = true }
# itertools = { workspace = true }
# nestify = { workspace = true }
# strum = { workspace = true }

## --Interface--
### - CLI -
clap = { workspace = true, features = [] } # "env", "string", "unicode", "wrap_help",
# dialoguer = { workspace = true }
# owo-colors = { workspace = true }

## --Parsing--
# monostate = { workspace = true }                     # serde: constraining, zero-sized type
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# Dev-Dependencies
##__Benchmarking__
divan = { workspace = true }
## __Test_Ergonomics__
pretty_assertions = { workspace = true }
test-log = { workspace = true }
## __Property Sample Testing__
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
## __Snapshot Testing__
insta = { workspace = true, features = [] } # "clap","csv","json","redactions","serde","toml","walkdir",


[lints]
workspace = true
