# ################################# -package features- ################################# #
[package]
name = "sample-async"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
# ################################# -lints- ################################# #
[lints]
workspace = true
# ################################# -compile profiles- ################################# #
# ################################# -user dependencies- ################################# #
[dependencies]
## ------------ -local- ------------ #
utilities = { path = "../utilities" }
## ~~~~~~~~~~~~ -async- ~~~~~~~~~~~~ #
async-stream = { workspace = true}
futures = { workspace = true }
tokio = { workspace = true, features = ["rt", "process"]  }# "fs","io-std","io-util","net","parking_lot","process","rt","rt-multi-thread","signal","sync","time",
tokio-stream = { workspace = true , features = []} # "fs","io-util","net","signal","sync","tokio-util"
### ......... -remote- ......... #
reqwest = { workspace = true, features = ["json"] } # "cookies","json",
### ......... -accessory- ......... #
governor = { workspace = true }
url = { workspace = true }
## ~~~~~~~~~~~~ -diagnostics- ~~~~~~~~~~~~ #
tracing = { workspace = true }  # features = ["release_max_level_warn"] | ["release_max_level_off"]
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true , features = [] } # "env-filter","json"
## ~~~~~~~~~~~~ -env & files- ~~~~~~~~~~~~ #
### ......... -config- ......... #
### ......... -proceses- ......... #
## ~~~~~~~~~~~~ -ergonomics- ~~~~~~~~~~~~ #
derive_more = { workspace = true , features = ["error", "from", "display"] }
## ~~~~~~~~~~~~ -interface- ~~~~~~~~~~~~ #
### ......... -cli- ......... #
clap = { workspace = true, features = [] } # "env", "string", "unicode", "wrap_help",
owo-colors = { workspace = true }
### ......... -egui- ......... #
## ~~~~~~~~~~~~ -math & science- ~~~~~~~~~~~~ #
### ......... -data- ......... #
### ......... -math- ......... #
rand = { workspace = true }
## ~~~~~~~~~~~~ -parsing- ~~~~~~~~~~~~ #
serde = { workspace = true }
serde_json = { workspace = true }
## ~~~~~~~~~~~~ -time- ~~~~~~~~~~~~ #

# ################################# -dev dependencies- ################################# #
[dev-dependencies]
## ~~~~~~~~~~~~ -benchmarking- ~~~~~~~~~~~~ #
divan = "0.1"
## ~~~~~~~~~~~~ -test ergonomics- ~~~~~~~~~~~~ #
pretty_assertions = "1"
test-log = { version = "0.2", features = ["trace"] }
## ~~~~~~~~~~~~ -property sample testing- ~~~~~~~~~~~~ #
quickcheck = "1"
quickcheck_macros = "1"
## ~~~~~~~~~~~~ snapshot testing- ~~~~~~~~~~~~ #
insta = { version = "1", features = [] } # "clap","csv","json","redactions","serde","toml","walkdir",
