[package]
publish =     false
name =        "sample-async"
description = "Sample (example), basic async code with tokio."
# default-run = "sample-async"

version =     {workspace=true}
edition =     {workspace=true}
authors =     {workspace=true}
categories  = {workspace=true}
keywords =    {workspace=true}

[lints]
workspace = true

[dependencies]
# workspace-local
utilities = {workspace=true}

# external
async-stream =             "0.3"
futures =                  "0.3"
tokio =        { version = "1", features = ["macros","rt",]  } # "fs","io-std","io-util","macros,"net","parking_lot","process","rt","rt-multi-thread","signal","sync","time", (wasm-compatible: sync,macros,io-util,rt,time)
tokio-stream = { version = "0.1", features = [] }  # "fs","io-util","net","signal","sync","tokio-util"

governor = { version = "0.10", default-features = false, features = ["jitter","std","quanta",] }  # "dashmap","jitter","no_std","quanta","std"
reqwest =  { version = "0.13", features = ["json","query"] }  # "cookies","json","query","form"
url =      { version = "2" }

rand = { version = "0.9", features = [] }  # "log","serde","simd_support"
serde = { version = "1", features = ["derive"] }  # "derive"
serde_json = "1"

derive_more = { version = "2", features = ["full"] }  # "add","add_assign","as_ref","constructor","debug","deref","deref_mut","display","error","from","from_str","index","index_mut","into","into_iterator","is_variant","mul","mul_assign","not","sum","try_from","try_into","try_unwrap","unwrap",
indoc =                   "2"

clap =       {workspace=true}
owo-colors = {workspace=true}
thiserror =  {workspace=true}

tracing =            { workspace = true }  # "release_max_level_warn"^"release_max_level_off"
tracing-error =      { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] } # "env-filter","json"

# [dev-dependencies]
