# ################################# -package features- ################################# #
[package]
name = "sample-egui"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
# ################################# -lints- ################################# #
[lints]
workspace = true
# ################################# -compile profiles- ################################# #
## NOTE: non-root profiles will be ignored. This belongs in the workspace root as [profile.release.package.sample-egui]
#     [profile.release]
#     # lto = true # VERY slightly smaller wasm
#     # opt-level = 's' # 10-20% smaller wasm compared to `opt-level = 3`
#     # opt-level = 1 # very slow and big wasm. Don't do this.
#     opt-level = 2 # fast and small wasm, basically same as `opt-level = 's'`
#     # opt-level = 3 # unnecessarily large wasm for no performance gain
# ################################# -user dependencies- ################################# #
[dependencies]
## ------------ -local- ------------ #
utilities = { path = "../utilities" }
## ~~~~~~~~~~~~ -async- ~~~~~~~~~~~~ #
# futures = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time"]  }# "fs","io-std","io-util","net","parking_lot","process","rt","rt-multi-thread","signal","sync","time",
tokio-util = { workspace =true, features = ["rt"] } # "codec","compat","futures-io","futures-util","hashbrown","io-util","rt","slab","time","tracing"
### ......... -remote- ......... #
reqwest = { workspace = true, features = ["rustls-tls"] } # "cookies","json",
### ......... -accessory- ......... #
## ~~~~~~~~~~~~ -diagnostics- ~~~~~~~~~~~~ #
tracing = { workspace = true }  # features = ["release_max_level_warn"] | ["release_max_level_off"]
tracing-appender = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true , features = [] } # "env-filter","json"
## ~~~~~~~~~~~~ -env & files- ~~~~~~~~~~~~ #
rfd = { workspace = true }
### ......... -config- ......... #
### ......... -proceses- ......... #
## ~~~~~~~~~~~~ -ergonomics- ~~~~~~~~~~~~ #
derive_more = { workspace = true , features = ["error", "from", "display"] }
indoc = { workspace = true }
## ~~~~~~~~~~~~ -interface- ~~~~~~~~~~~~ #
### ......... -cli- ......... #
### ......... -egui- ......... #
eframe = { workspace = true, features = ["persistence","wgpu"] } # "default_fonts","glow","persistence","wayland","wgpu"
egui = { workspace = true, features = [] } # "callstack", "document-features"
egui_extras = { workspace = true, features = [] } # "all_loaders","datepicker","document-features","serde","syntect",
# egui_table = { workspace = true }
# egui_inbox = { workspace = true }
# egui_suspense = {version = "0.8"}
## ~~~~~~~~~~~~ -math & science- ~~~~~~~~~~~~ #
### ......... -data- ......... #
### ......... -math- ......... #
rand = { workspace = true }
## ~~~~~~~~~~~~ -parsing- ~~~~~~~~~~~~ #
serde = { workspace = true }
serde_json = { workspace = true }
## ~~~~~~~~~~~~ -time- ~~~~~~~~~~~~ #

# ################################# -dev dependencies- ################################# #
[dev-dependencies]
## ~~~~~~~~~~~~ -benchmarking (workspace)- ~~~~~~~~~~~~ #
divan = "0.1"
## ~~~~~~~~~~~~ -test ergonomics (workspace)- ~~~~~~~~~~~~ #
pretty_assertions = "1"
test-log = { version = "0.2", features = ["trace"] }
## ~~~~~~~~~~~~ -property sample testing (workspace)- ~~~~~~~~~~~~ #
quickcheck = "1"
quickcheck_macros = "1"
## ~~~~~~~~~~~~ snapshot testing (workspace)- ~~~~~~~~~~~~ #
insta = { version = "1", features = [] } # "clap","csv","json","redactions","serde","toml","walkdir",
