# ################################# -package features- ################################# #
[package]
name = "sample-webapp"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
# ################################# -lints- ################################# #
[lints]
workspace = true
# ################################# -compile profiles- ################################# #
## NOTE: non-root profiles will be ignored. This belongs in the workspace root as [profile.release.package.sample-egui]
#     [profile.release]
#     # lto = true # VERY slightly smaller wasm
#     # opt-level = 's' # 10-20% smaller wasm compared to `opt-level = 3`
#     # opt-level = 1 # very slow and big wasm. Don't do this.
#     opt-level = 2 # fast and small wasm, basically same as `opt-level = 's'`
#     # opt-level = 3 # unnecessarily large wasm for no performance gain

# ################################# -wasm32 user dependencies- ################################# #
[target.'cfg(target_arch = "wasm32")'.dependencies]
# |---_ TARGET: web _---|
## --Diagnostics--
# log = "0.4"
# tracing = { version = "0.1.41", features = ["release_max_level_off"] }
## --Other--
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

# ################################# -general user dependencies- ################################# #
[dependencies]
## ------------ -local- ------------ #
utilities = { path = "../utilities" }
## ~~~~~~~~~~~~ -async- ~~~~~~~~~~~~ #
### ......... -remote- ......... #
### ......... -accessory- ......... #
## ~~~~~~~~~~~~ -diagnostics- ~~~~~~~~~~~~ #
tracing = { workspace = true }  # features = ["release_max_level_warn"] | ["release_max_level_off"]
tracing-appender = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
## ~~~~~~~~~~~~ -env & files- ~~~~~~~~~~~~ #
### ......... -config- ......... #
### ......... -proceses- ......... #
## ~~~~~~~~~~~~ -ergonomics- ~~~~~~~~~~~~ #
derive_more = { workspace = true , features = ["error", "from", "display"] }
indoc = { workspace = true }
## ~~~~~~~~~~~~ -interface- ~~~~~~~~~~~~ #
### ......... -cli- ......... #
### ......... -egui- ......... #
eframe = { workspace = true }
egui = { workspace = true }
## ~~~~~~~~~~~~ -math & science- ~~~~~~~~~~~~ #
### ......... -data- ......... #
### ......... -math- ......... #
## ~~~~~~~~~~~~ -parsing- ~~~~~~~~~~~~ #
serde = { workspace = true }
## ~~~~~~~~~~~~ -time- ~~~~~~~~~~~~ #

# ################################# -dev dependencies- ################################# #
[dev-dependencies]
## ~~~~~~~~~~~~ -benchmarking (workspace)- ~~~~~~~~~~~~ #
divan = "0.1"
## ~~~~~~~~~~~~ -test ergonomics (workspace)- ~~~~~~~~~~~~ #
pretty_assertions = "1"
test-log = { version = "0.2", features = ["trace"] }
## ~~~~~~~~~~~~ -property sample testing (workspace)- ~~~~~~~~~~~~ #
quickcheck = "1"
quickcheck_macros = "1"
## ~~~~~~~~~~~~ snapshot testing (workspace)- ~~~~~~~~~~~~ #
insta = { version = "1", features = [] } # "clap","csv","json","redactions","serde","toml","walkdir",
