[package]
name = "sample_egui"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true

[profile.release]
# lto = true # VERY slightly smaller wasm
# opt-level = 's' # 10-20% smaller wasm compared to `opt-level = 3`
# opt-level = 1 # very slow and big wasm. Don't do this.
opt-level = 2 # fast and small wasm, basically same as `opt-level = 's'`
# opt-level = 3 # unnecessarily large wasm for no performance gain

[dependencies]
# ---- local ----
utilities = { path = "../utilities" }
egui_suspense = {version = "0.8"}

## --Async--
futures = { workspace = true }
tokio = { workspace = true }
### - Remote -
reqwest = { workspace = true }
# sqlx = { workspace = true }
### - Accessory -
# governor = { workspace = true }
# url = { workspace = true }

## --Diagnostics--
tracing = { workspace = true }  # features = ["release_max_level_warn"] | ["release_max_level_off"]
tracing-appender = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
# tracing-timing = { workspace = true }

## --Env & Files--
# arboard = { workspace = true }
# include_dir = { workspace = true }
rfd = { workspace = true }

## --Ergonomics--
# bon = { workspace = true }
derive_more = { workspace = true }
indoc = { workspace = true }
# itertools = { workspace = true }
# nestify = { workspace = true }
# strum = { workspace = true }

## --Interface--
### - CLI -
owo-colors = { workspace = true }
### - egui -
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
# egui_table = { workspace = true }
# egui_inbox = { workspace = true }

# ## --Math & Science--
# ### - Data -
# polars = { workspace = true, features = [] }
# ### - Math -
# faer = { workspace = true }
rand = { workspace = true }

## --Parsing--
serde = { workspace = true }
serde_json = { workspace = true }

## --Time--
# jiff = { workspace = true }


[dev-dependencies]
# Dev-Dependencies
##__Benchmarking__
divan = { workspace = true }
## __Test_Ergonomics__
pretty_assertions = { workspace = true }
test-log = { workspace = true }
## __Property Sample Testing__
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
## __Snapshot Testing__
insta = { workspace = true }


[lints]
workspace = true
