# ################################# -package features- ################################# #
[package]
name = "try-trait"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
# ################################# -lints- ################################# #
[lints]
workspace = true
# ################################# -compile profiles- ################################# #

# ################################# -user dependencies- ################################# #
[dependencies]
## ------------ -local- ------------ #
utilities = { path = "../utilities" }
## ~~~~~~~~~~~~ -async- ~~~~~~~~~~~~ #
### ......... -remote- ......... #
### ......... -accessory- ......... #
## ~~~~~~~~~~~~ -diagnostics- ~~~~~~~~~~~~ #
tracing = { workspace = true }  # features = ["release_max_level_warn"] | ["release_max_level_off"]
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true , features = [] } # "env-filter","json"
## ~~~~~~~~~~~~ -env & files- ~~~~~~~~~~~~ #
### ......... -config- ......... #
### ......... -proceses- ......... #
## ~~~~~~~~~~~~ -ergonomics- ~~~~~~~~~~~~ #
derive_more = { workspace = true, features = ["from_str", "into"] }
## ~~~~~~~~~~~~ -interface- ~~~~~~~~~~~~ #
### ......... -cli- ......... #
clap = { workspace = true, features = [] } # "env", "string", "unicode", "wrap_help",
### ......... -egui- ......... #
## ~~~~~~~~~~~~ -math & science- ~~~~~~~~~~~~ #
### ......... -data- ......... #
### ......... -math- ......... #
## ~~~~~~~~~~~~ -parsing- ~~~~~~~~~~~~ #
## ~~~~~~~~~~~~ -time- ~~~~~~~~~~~~ #

# ################################# -dev dependencies- ################################# #
[dev-dependencies]
## ~~~~~~~~~~~~ -benchmarking (workspace)- ~~~~~~~~~~~~ #
divan = { workspace = true }
## ~~~~~~~~~~~~ -test ergonomics (workspace)- ~~~~~~~~~~~~ #
pretty_assertions = { workspace = true }
test-log = { workspace = true }
## ~~~~~~~~~~~~ -property sample testing (workspace)- ~~~~~~~~~~~~ #
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
## ~~~~~~~~~~~~ snapshot testing (workspace)- ~~~~~~~~~~~~ #
insta = { workspace = true, features = [] } # "clap","csv","json","redactions","serde","toml","walkdir",
